Alteração do index.html do dia 1

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-1-html-css-estruturas-de-pagina/index.html
@@ -2,7 +2,10 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8">
-    <title>HTML</title>
+    <title> Exercício HTML e CSS</title>
+    <style>
+      
+    </style>
   </head>
   <body>
     <h1>Exercícios</h1>
