--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -4,22 +4,43 @@
     <meta charset="UTF-8">
     <title>HTML</title>
     <style>
+        body{
+            font-size: 16px;
+        }
         h1{
             font-size: 65px;
             color: orange;
+            font-family: sans-serif;
         }
         .lista{
-            background-color: rgb(108, 101, 167);
+            background-color: rgb(10, 101, 167);
+            line-height: 50px;
+            text-align: center;  
+        }
+        p{
+            font-weight: 600;
+            font-size: 3em;
+            font-style: oblique;
+            text-decoration: overline;
+        }
+        #amarelo{
+            background-color: yellow;
+        }
+        #vermelho{
+            background-color: red;
+        }
+        #marrom{
+            background-color: brown;
         }
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
     <p class="lista">Qual é a sua cor favorita?</p>
-    <ul class="lista">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+    <ul>
+      <li id="amarelo">Amarelo</li>
+      <li id="vermelho">Vermelho</li>
+      <li id="marrom">Marrom</li>
     </ul>
   </body>
 </html>
