Finalização dos exercícios de seletores e posicionamento

--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index3.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-3-html-css-seletores-e-posicionamento/index3.html
@@ -7,12 +7,17 @@
   </head>
   <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
-    <ol class="itens-lista">
-        <li><a href="https://www.netflix.com" target="_blank">Netflix</a></li>
-        <li><a href="https://www.youtube.com" target="_blank">Youtube</a></li>
-        <li><a href="https://www.corsair.com" target="_blank">Corsair</a></li>
-    </ol>
     <p>Top 3 dos melhores sites que existem na web</p>
+    <ol class="lista">
+        <li>Netflix</li>
+        <li>Youtube</li>
+        <li>Corsair</li>
+    </ol>
     <p>Principais motivos para eu gostar deles</p>
+    <ul class="lista">
+        <li>Responsividade</li>
+        <li>Design</li>
+        <li>Agilidade</li>
+    </ul>
   </body>
 </html>
