--- a/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/introducao-a-html-e-css.4/index.html
+++ b/fundamentos/bloco-3-introducao-a-html-e-css/dia-4-html-semantico/introducao-a-html-e-css.4/index.html
@@ -9,7 +9,7 @@
     
     <!-- Cabeçalho -->
     <header>
-        <h1>Soco a 80km/h: Conheça o Stomatopoda.</h1>
+        <h1>Soco a 80km/h: Conheça o Stomatopoda</h1>
     </header>
     
     <!-- Links de navegação -->
