Resolução do exercício 3

--- a/fundamentos/secao-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/javascript-dom-eventos-e-web-storage/index.html
+++ b/fundamentos/secao-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/javascript-dom-eventos-e-web-storage/index.html
@@ -56,7 +56,8 @@
         document.getElementsByClassName(classe)[i].style.backgroundColor = cor;
       }
     }
-    alteraCorClasse('main-content','rgb(76,164,109)')
+    alteraCorClasse('main-content','rgb(76,164,109)');
+    alteraCorClasse('center-content', 'white');
 /*
 Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
 - document.getElementById()
