--- a/fundamentos/secao-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/javascript-dom-eventos-e-web-storage/index.html
+++ b/fundamentos/secao-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/javascript-dom-eventos-e-web-storage/index.html
@@ -51,39 +51,46 @@
     let descricao = 'Me vejo trabalhando na XP Inc. ganhando pelo menos R$12.000,00 por mês'
     visaoFutura('visao', descricao);
 
-    function alteraCorClasse(classe, cor){
-      for (i = 0; i < document.getElementsByClassName(classe).length; i++){
+    function alteraCorClasse(classe, cor) {
+      for (i = 0; i < document.getElementsByClassName(classe).length; i++) {
         document.getElementsByClassName(classe)[i].style.backgroundColor = cor;
       }
     }
 
-    function alteraTituloClasse (classe, texto){
-      for (i = 0; i < document.getElementsByClassName(classe).length; i++){
-      document.getElementsByClassName(classe)[i].innerText = texto;
+    function alteraTituloClasse(classe, texto) {
+      for (i = 0; i < document.getElementsByClassName(classe).length; i++) {
+        document.getElementsByClassName(classe)[i].innerText = texto;
       }
     }
 
-    function alteraTextoTag (tag, texto, numero){
-        document.getElementsByTagName(tag)[numero-1].innerText = texto;
+    function alteraTextoTag(tag, texto, numero) {
+      document.getElementsByTagName(tag)[numero - 1].innerText = texto;
+    }
+
+    function exibeParagrafos(tag) {
+      for (i = 0; i < document.getElementsByTagName(tag).length; i++){
+        console.log(document.getElementsByTagName(tag)[i]);
       }
+    }
 
-    alteraCorClasse('main-content','rgb(76,164,109)');
+    alteraCorClasse('main-content', 'rgb(76,164,109)');
     alteraCorClasse('center-content', 'white');
-    alteraTituloClasse('title','Exercício - Javascript');
-    alteraTextoTag ('p', 'Seja bem-vindo ao nosso MARAVILHOSO site!', 1);
+    alteraTituloClasse('title', 'Exercício - Javascript');
+    alteraTextoTag('p', 'Seja bem-vindo ao nosso MARAVILHOSO site!', 1);
+    exibeParagrafos('p');
 
-/*
-Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
-- document.getElementById()
-- document.getElementsByClassName()
-- document.getElementsByTagName()
-1. Crie e execute uma função que mude o texto na tag `<p>-----</p>`, para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)
-2. Crie e execute uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
-3. Crie e execute uma função que mude a cor do quadrado vermelho para branco.
-4. Crie e execute uma função que corrija o texto da tag <h1>.
-5. Crie e execute uma função que modifique o texto da primeira tag <p> para maiúsculo.
-6. Crie e execute uma função que exiba o conteúdo de todas as tags <p> no console.
-*/
+    /*
+    Aqui você vai modificar os elementos já existentes utilizando apenas as funções:
+    - document.getElementById()
+    - document.getElementsByClassName()
+    - document.getElementsByTagName()
+    1. Crie e execute uma função que mude o texto na tag `<p>-----</p>`, para uma descrição de como você se vê daqui a 2 anos. (Não gaste tempo pensando no texto e sim realizando o exercício)
+    2. Crie e execute uma função que mude a cor do quadrado amarelo para o verde da Trybe (rgb(76,164,109)).
+    3. Crie e execute uma função que mude a cor do quadrado vermelho para branco.
+    4. Crie e execute uma função que corrija o texto da tag <h1>.
+    5. Crie e execute uma função que modifique o texto da primeira tag <p> para maiúsculo.
+    6. Crie e execute uma função que exiba o conteúdo de todas as tags <p> no console.
+    */
   </script>
 </body>
 
