--- a/fundamentos/secao-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercicios-de-final-de-dia/index.html
+++ b/fundamentos/secao-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercicios-de-final-de-dia/index.html
@@ -1,63 +1,118 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Exercício</title>
-    <style>
-      section {
-        border-color: black;
-        border-style: solid;
-      }
 
-      .title {
-        text-align: center;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width" />
+  <title>Exercício</title>
+  <style>
+    section {
+      border-color: black;
+      border-style: solid;
+    }
 
-      .main-content {
-        background-color: yellow;
-      }
+    .title {
+      text-align: center;
+    }
 
-      .main-content .center-content {
-        background-color: red;
-        width: 50%;
-        margin-left: auto;
-        margin-right: auto;
-      }
+    .main-content {
+      background-color: yellow;
+    }
 
-      .main-content .center-content p {
-        font-style: italic;
-      }
+    .main-content .center-content {
+      background-color: red;
+      width: 50%;
+      margin-left: auto;
+      margin-right: auto;
+    }
 
-      .main-content .left-content {
-        background-color: green;
-        width: 60%;
-        margin-left: 0;
-        margin-right: auto;
-      }
+    .main-content .center-content p {
+      font-style: italic;
+    }
 
-      .main-content .left-content .small-image {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        border-radius: 100%;
-      }
+    .main-content .left-content {
+      background-color: green;
+      width: 60%;
+      margin-left: 0;
+      margin-right: auto;
+    }
 
-      .main-content .right-content {
-        background-color: blue;
-        width: 60%;
-        margin-left: auto;
-        margin-right: 0;
-      }
+    .main-content .left-content .small-image {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      border-radius: 100%;
+    }
 
-      .main-content .description {
-        text-align: center;
-      }
-    </style>
-  </head>
-  <body>
-    <script>
-      // COLOQUE SEU CÓDIGO AQUI
-    </script>
-  </body>
+    .main-content .right-content {
+      background-color: blue;
+      width: 60%;
+      margin-left: auto;
+      margin-right: 0;
+    }
+
+    .main-content .description {
+      text-align: center;
+    }
+  </style>
+</head>
+
+<body id = "body">
+  <script>
+    // 1. Adicione a tag h1 com o texto Exercício - JavaScript DOM como filho da tag body;
+    let body = document.querySelector('#body');
+    let titulo = document.createElement('h1');
+    titulo.innerText = 'Exercício - JavaScript DOM';
+    body.appendChild(titulo);
+
+    // 2. Adicione a tag main com a classe main-content como filho da tag body;
+    let mainContent = document.createElement('main');
+    mainContent.className = 'main-content';
+    body.appendChild(mainContent);
+
+    // 3. Adicione a tag section com a classe center-content como filho da tag main criada no passo 2;
+    let section1 = document.createElement('section');
+    section1.className = 'center-content';
+    mainContent.appendChild(section1);
+
+    // 4. Adicione a tag p como filho do section criado no passo 3 e coloque algum texto;
+    let p1 = document.createElement('p');
+    section1.appendChild(p1);
+    p1.innerText = 'Este é o primeiro parágrafo!';
+
+    // 5. Adicione a tag section com a classe left-content como filho da tag main criada no passo 2;
+    let section2 = document.createElement('section');
+    section2.className = 'left-content';
+    mainContent.appendChild(section2);  
+    
+    // 6. Adicione a tag section com a classe right-content como filho da tag main criada no passo 2;
+    let section3 = document.createElement('section');
+    section3.className = 'right-content';
+    mainContent.appendChild(section3);
+    
+    // 7. Adicione uma imagem com src configurado para o valor https://picsum.photos/200 e classe small-image. Esse elemento deve ser filho do section criado no passo 5;
+    let image = document.createElement('img');
+    image.className = 'small-image';
+    image.src = 'https://picsum.photos/200';
+    section2.appendChild(image);
+
+    // 8. Adicione uma lista não ordenada com os valores de 1 a 10 por extenso, ou seja, um, dois, três, … como valores da lista. Essa lista deve ser filha do section criado no passo 6;
+    let lista = document.createElement('ul');
+    section3.appendChild(lista);
+    let array = ['um', 'dois', 'três', 'quatro', 'cinco', 'seis', 'sete', 'oito', 'nove', 'dez'];
+    for (i = 0; i < array.length; i++){
+      let itemLista = document.createElement('li');
+      itemLista.innerText = array[i];
+      lista.appendChild(itemLista);
+    }
+
+    console.log(body.children);
+    console.log(mainContent.children);
+    console.log(section1.children);
+    console.log(section2.children);
+    console.log(section3.children);
+    console.log(lista.children);
+  </script>
+</body>
+
 </html>
