--- a/fundamentos/secao-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercicios-de-final-de-dia/index.html
+++ b/fundamentos/secao-5-javascript-dom-eventos-e-web-storage/dia-2-javascript-trabalhando-com-elementos/exercicios-de-final-de-dia/index.html
@@ -106,6 +106,11 @@
       lista.appendChild(itemLista);
     }
 
+    // 9. Adicione 3 tags h3, todas sendo filhas do main criado no passo 2.
+    for (i = 0; i < 3; i++){
+    mainContent.appendChild(document.createElement('h3'));
+    }
+
     console.log(body.children);
     console.log(mainContent.children);
     console.log(section1.children);
