--- a/fundamentos/secao-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-e-css-forms/form.html
+++ b/fundamentos/secao-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-e-css-forms/form.html
@@ -10,23 +10,19 @@
   <header>
     <h1>TrybeTrip</h1>
   </header>
+  <form action="" method="get">
   <fieldset id="fieldForm">
-    <form action="" method="get">
-
       <!-- Nome -->
-      <section class="line-content">
       <label for="fullName">Nome:</label>
-      <input type="text" name="nomeCompleto" id="fullName" minlength="10" maxlength="40" autocomplete="on">
-      </section>
+      <input type="text" name="nomeCompleto" id="fullName" minlength="10" maxlength="40" autocomplete="on" required placeholder="Digite seu nome completo..." size="40">
+      <br>
 
       <!-- Email -->
-      <section class="line-content">
       <label for="input-email">Email:</label>
-      <input type="email" name="email" id="input-email" minlength="10" maxlength="50">
-      </section>
+      <input type="email" name="email" id="input-email" minlength="10" maxlength="50" size="40" placeholder="Digite aqui seu e-mail...">
+      <br>
 
       <!-- Destino Preferido -->
-      <section class="line-content">
       <label for="cidade"><input type="radio" name="destino" id="cidade" value="cidade">Cidade</label>
       
       <label for="campo"><input type="radio" name="destino" id="campo" value="campo">Campo</label>
@@ -34,44 +30,36 @@
       <label for="praia"><input type="radio" name="destino" id="praia" value="praia">Praia</label>
 
       <label for="montanhas"><input type="radio" name="destino" id="montanhas" value="montanhas">Montanhas</label>
-      </section>
 
       <!-- Espaço digitação -->
-      <section class="line-content">
         <p><strong>Nos conte porque você deveria ser o escolhido para ganhar o concurso TrybeTrip:</strong></p>
         <textarea name="discurso" id="input-discurso" cols="62" rows="10" maxlength="500" placeholder="Digite aqui sua resposta (no máximo 500 caracteres)"></textarea>
-      </section>
+        <br>
 
       <!-- Data -->
-      <section class="line-content">
         <label for="date">Data:</label>
         <input type="date" name="data" id="date">
-      </section>
+        <br>
 
       <!-- Concordância -->
-      <section class="line-content">
         <!-- Checkbox 1 -->
-        <section>
         <input type="checkbox" name="oportunidades" id="promotion">
         <label for="promotion">Gostaria de receber outras incríveis oportunidades oferecidas pela Trybe?</label>
-        </section>
+        <br>
 
         <!-- Checkbox 2 -->
-        <section>
-        <input type="checkbox" name="aceite" id="agreement">
+        <input type="checkbox" name="aceite" id="agreement" required>
         <label for="agreement">Concordo que imagens das minhas férias poderão ser usadas na divulgação de concursos futuros.</label>
-        </section>
-      </section>
 
       <!-- Botão de enviar -->
       <section id="botoes">
-        <input type="submit" value="Enviar" id="button">
+        <input type="submit" value="Enviar" id="button" disabled>
       </section>
       <p id="teste1"></p>
       <p id="teste2"></p>
       <p id="teste3"></p>
-    </form>
   </fieldset>
+  </form>
   <script src="script.js"></script>
 </body>
 </html>
