--- a/fundamentos/secao-6-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-javascript-e-frameworks-css/form.html
+++ b/fundamentos/secao-6-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-javascript-e-frameworks-css/form.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TrybeTrip</title>
   <!-- Bootstrap-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
   <!-- DataPickerX CSS-->
   <link rel="stylesheet" href="dist/css/DatePickerX.min.css">
@@ -14,57 +16,66 @@
   <!-- Pikaday CSS-->
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
 </head>
+
 <body class="text-bg-success">
   <header>
-    <h1 class="text-center display-2 mt-2 fw-semibold" >TrybeTrip</h1>
+    <h1 class="text-center display-2 mt-2 fw-semibold">TrybeTrip</h1>
   </header>
-  <form action="" method="get" class="container">
-  <fieldset id="fieldForm">
+  <form action="" method="get" class="form container">
       <!-- Nome -->
       <label class="form-label" for="fullName">Nome:</label>
-      <input class="form-control" type="text" name="nomeCompleto" id="fullName" minlength="10" maxlength="40" autocomplete="on" required placeholder="Digite seu nome completo..." size="40">
+      <input class="form-control" type="text" name="nomeCompleto" id="fullName" minlength="10" maxlength="40"
+        autocomplete="on" required placeholder="Digite seu nome completo..." size="40">
       <br>
 
       <!-- Email -->
       <label class="form-label" for="input-email">Email:</label>
-      <input class="form-control" type="email" name="email" id="input-email" minlength="10" maxlength="50" size="40" placeholder="Digite aqui seu e-mail...">
+      <input class="form-control" type="email" name="email" id="input-email" minlength="10" maxlength="50" size="40"
+        placeholder="Digite aqui seu e-mail...">
       <br>
 
       <!-- Destino Preferido -->
       <p class="fs-5 fw-semibold">Qual destino você prefere?</p>
-      <label class="form-check-label mb-3" for="cidade"><input type="radio" name="destino" id="cidade" value="cidade" class="form-check-input">  Cidade</label>
-      
-      <label class="form-check-label mb-3" for="campo"><input type="radio" name="destino" id="campo" value="campo" class="form-check-input">  Campo</label>
+      <label class="form-check-label mb-3" for="cidade"><input type="radio" name="destino" id="cidade" value="cidade"
+          class="form-check-input"> Cidade</label>
 
-      <label class="form-check-label mb-3" for="praia"><input type="radio" name="destino" id="praia" value="praia" class="form-check-input">  Praia</label>
+      <label class="form-check-label mb-3" for="campo"><input type="radio" name="destino" id="campo" value="campo"
+          class="form-check-input"> Campo</label>
 
-      <label class="form-check-label mb-3" for="montanhas"><input type="radio" name="destino" id="montanhas" value="montanhas" class="form-check-input"> Montanhas</label>
+      <label class="form-check-label mb-3" for="praia"><input type="radio" name="destino" id="praia" value="praia"
+          class="form-check-input"> Praia</label>
+
+      <label class="form-check-label mb-3" for="montanhas"><input type="radio" name="destino" id="montanhas"
+          value="montanhas" class="form-check-input"> Montanhas</label>
 
       <!-- Espaço digitação -->
-        <p class="fs-5 mt-2 fw-semibold">Conte-nos porque você deveria ser o escolhido para ganhar o concurso TrybeTrip:</p>
-        <textarea class="form-control" name="discurso" id="input-discurso" cols="62" rows="10" maxlength="500" placeholder="Digite aqui sua resposta (no máximo 500 caracteres)"></textarea>
-        <br>
+      <p class="fs-5 mt-2 fw-semibold">Conte-nos porque você deveria ser o escolhido para ganhar o concurso TrybeTrip:
+      </p>
+      <textarea class="form-control" name="discurso" id="input-discurso" cols="62" rows="10" maxlength="500"
+        placeholder="Digite aqui sua resposta (no máximo 500 caracteres)"></textarea>
+      <br>
 
       <!-- Data -->
-        <label class="form-label" for="date">Data:</label>
-        <input type="text" name="data" id="datepicker">
-        <br>
+      <label class="form-label" for="date">Data:</label>
+      <input class="form-control-sm" type="text" name="data" id="datepicker">
+      <br>
 
       <!-- Concordância -->
-        <!-- Checkbox 1 -->
-        <input type="checkbox" name="oportunidades" id="promotion" class="form-check-input">
-        <label class="form-check-label" for="promotion">Gostaria de receber outras incríveis oportunidades oferecidas pela Trybe?</label>
-        <br>
+      <!-- Checkbox 1 -->
+      <input type="checkbox" name="oportunidades" id="promotion" class="form-check-input">
+      <label class="form-check-label" for="promotion">Gostaria de receber outras incríveis oportunidades oferecidas pela
+        Trybe?</label>
+      <br>
 
-        <!-- Checkbox 2 -->
-        <input type="checkbox" name="aceite" id="agreement" class="form-check-input" required>
-        <label class="form-check-label" for="agreement">Concordo que imagens das minhas férias poderão ser usadas na divulgação de concursos futuros.</label>
+      <!-- Checkbox 2 -->
+      <input type="checkbox" name="aceite" id="agreement" class="form-check-input" required>
+      <label class="form-check-label" for="agreement">Concordo que imagens das minhas férias poderão ser usadas na
+        divulgação de concursos futuros.</label>
 
       <!-- Botão de enviar -->
       <section id="botoes">
         <input class="btn btn-primary mt-3" type="submit" value="Enviar" id="button" disabled>
       </section>
-  </fieldset>
   </form>
   <script src="script.js"></script>
   <!-- Pikaday JS -->
@@ -76,6 +87,20 @@
 
   <script>
     let picker = new Pikaday({ field: document.getElementById('datepicker') });
+
+    const validation = new JustValidate('#form', {
+      errorFieldCssClass: 'is-invalid',
+    });
+
+    window.JustValidate('#form', {
+      rules: {
+        fullName: {
+          rule: 'minLength',
+          value: 3
+        }}});
+    
+
   </script>
 </body>
+
 </html>
